patch 0.3 tool dashboard

--- a/app/templates/tools/seo/titles.html
+++ b/app/templates/tools/seo/titles.html
@@ -100,6 +100,9 @@
      
     <div class="row">
         <div class="col-md-3 chart-container">
+            <canvas id="totalChecksChart"></canvas>
+        </div>
+        <div class="col-md-3 chart-container">
             <canvas id="durationChart"></canvas>
         </div>
         <div class="col-md-3 chart-container">
@@ -108,12 +111,14 @@
         <div class="col-md-3 chart-container">     
             <canvas id="dangerPercentageChart"></canvas>
         </div>
-        <div class="col-md-3 chart-container">
-            <canvas id="totalChecksChart"></canvas>
-        </div>
+       
     </div>
 
     <div class="row text-center mt-4">
+        <div class="col-md-3">
+            <h5>Results</h5>
+            <span class="badge badge-custom bg-info">{{ total_checks }}</span>
+        </div>
         <div class="col-md-3">
             <h5>Duration</h5>
             <span class="badge badge-custom bg-info">{{ duration }}</span>
@@ -124,12 +129,9 @@
         </div>
         <div class="col-md-3">
             <h5>Danger Checks</h5>
-            <span class="badge badge-custom bg-danger">{{ danger_count }}-{{ danger_percentage }}%</span>
+            <span class="badge badge-custom bg-danger">{{ danger_percentage }}%</span>
         </div>
-        <div class="col-md-3">
-            <h5>Results</h5>
-            <span class="badge badge-custom bg-info">{{ total_checks }}</span>
-        </div>
+    
     </div>
 
 
