--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -194,7 +194,7 @@
               <div class="column">
                 <h6 class="dropdown-header">On-Page SEO 📝</h6>
                 <a class="dropdown-item" href="/tools/seo/titles"><i class="fas fa-heading"></i> Títulos (Titles)</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-clipboard"></i> Meta Description</a>
+                <a class="dropdown-item" href="/tools/seo/meta-description"><i class="fas fa-clipboard"></i> Meta Description</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-key"></i> Meta Keywords</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-heading"></i> Encabezados (Headings)</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-image"></i> Imágenes (Images)</a>
