meta keyword update

--- a/app/templates/tools/styles.html
+++ b/app/templates/tools/styles.html
@@ -44,3 +44,76 @@
         color: red;
     }
 </style>
+
+<!-- header dashboard-->
+<style>
+    .chart-container {
+        position: relative;
+        margin: auto;
+        height: 150px;
+        width: 150px;
+
+    }
+
+    #dangerPercentageChart, #validResultsChart {
+        
+    }
+    #durationChart, #totalChecksChart {
+
+        height: 150px;
+        width: 150px;
+
+    }
+
+    .bg-success {
+        background-color: green !important;
+    }
+
+    .bg-danger {
+        background-color: red !important;
+    }
+
+    .badge.bg-black {
+        background-color: black;
+        color: white;
+    }
+
+    .badge.text-success {
+        color: green;
+    }
+
+    .badge.text-danger {
+        color: red;
+    }
+
+    .accordion-button.collapsed .row .text-end {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .dashboard-header {
+        margin-bottom: 30px;
+    }
+
+    .percentage {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    .badge-custom {
+        font-size: 1.25rem;
+    }
+
+    .status-icon {
+        font-size: 2.5rem;
+    }
+
+    .valid {
+        color: green;
+    }
+
+    .invalid {
+        color: red;
+    }
+</style>
