--- a/app/templates/tools/seo/meta-keywords.html
+++ b/app/templates/tools/seo/meta-keywords.html
@@ -1,4 +1,4 @@
-<!-- app/templates/tools/seo/metas.html -->
+<!-- app/templates/tools/seo/meta-keywords.html -->
  
 {% extends "base.html" %}
 
@@ -8,6 +8,7 @@
 
 
 {% block content %}
+
 
 {% include 'tools/styles.html' %}
 
@@ -31,7 +32,7 @@
 
 
         {% if is_results_valid %}
-            <h2 class="section-title">Meta Description URL Issues</h2>
+            <h2 class="section-title">Meta Keywords URL Issues</h2>
             <div class="accordion" id="resultsAccordion">
                 
                              <!-- Missing -->
@@ -96,68 +97,6 @@
                                 </div>
                             </div>
 
-                <!-- Over_155_character -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Missing">
-                        <button class="accordion-button collapsed {% if results['Missing'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Missing" aria-expanded="false" aria-controls="collapse-Missing">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-exclamation-triangle"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Over_155_character:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Over_155_character'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Missing" class="accordion-collapse collapse" aria-labelledby="heading-Missing" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Missing test.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Below_70_characters -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Duplicate">
-                        <button class="accordion-button collapsed {% if results['Duplicate'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Duplicate" aria-expanded="false" aria-controls="collapse-Duplicate">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-copy"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Below_70_characters:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Below_70_characters'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Duplicate" class="accordion-collapse collapse" aria-labelledby="heading-Duplicate" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Duplicate test.</p>
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Multiples -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading-Over-60-Characters">
@@ -188,38 +127,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Outside_head -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Below-30-Characters">
-                        <button class="accordion-button collapsed {% if results['Below_30_characters'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Below-30-Characters" aria-expanded="false" aria-controls="collapse-Below-30-Characters">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-font"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Outside_head:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Outside_head'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Below-30-Characters" class="accordion-collapse collapse" aria-labelledby="heading-Below-30-Characters" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Below 30 Characters test.</p>
-                        </div>
-                    </div>
-                </div>
-
 
             </div>
         {% else %}
