--- a/app/templates/tools/seo/headings.html
+++ b/app/templates/tools/seo/headings.html
@@ -1,4 +1,4 @@
-<!-- app/templates/tools/seo/titles.html -->
+<!-- app/templates/tools/seo/headings.html -->
  
 {% extends "base.html" %}
 
@@ -8,6 +8,7 @@
 
 
 {% block content %}
+
 
 {% include 'tools/styles.html' %}
 
@@ -31,64 +32,16 @@
 
 
         {% if is_results_valid %}
-            <h2 class="section-title">Page Title Issues</h2>
+            <h2 class="section-title">Heading URL Issues</h2>
             <div class="accordion" id="resultsAccordion">
-
-                <!-- Title -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Title">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Title" aria-expanded="false" aria-controls="collapse-Title">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-heading"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Title:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {{ results['Title_1'] }}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Title" class="accordion-collapse collapse" aria-labelledby="heading-Title" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Title.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Title Length -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Title-Length">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Title-Length" aria-expanded="false" aria-controls="collapse-Title-Length">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-text-width"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Title Length:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {{ results['Title_1_Length'] }}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Title-Length" class="accordion-collapse collapse" aria-labelledby="heading-Title-Length" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Title Length.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Missing -->
+                
+                'Missing': h1_missing,
+                'Duplicate': h1_duplicate,
+                'Over_70_characters': h1_over_70_characters,
+                'Multiple': h1_multiple,
+                'Alt_Text_in_h1': alt_text_in_h1,
+                'Non-sequential': non_sequential_h1
+                      <!-- Missing -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading-Missing">
                         <button class="accordion-button collapsed {% if results['Missing'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Missing" aria-expanded="false" aria-controls="collapse-Missing">
@@ -150,99 +103,6 @@
                     </div>
                 </div>
 
-                <!-- Over 60 Characters -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Over-60-Characters">
-                        <button class="accordion-button collapsed {% if results['Over_60_characters'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Over-60-Characters" aria-expanded="false" aria-controls="collapse-Over-60-Characters">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-font"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Over 60 Characters:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Over_60_characters'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Over-60-Characters" class="accordion-collapse collapse" aria-labelledby="heading-Over-60-Characters" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Over 60 Characters test.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Below 30 Characters -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Below-30-Characters">
-                        <button class="accordion-button collapsed {% if results['Below_30_characters'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Below-30-Characters" aria-expanded="false" aria-controls="collapse-Below-30-Characters">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-font"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Below 30 Characters:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Below_30_characters'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Below-30-Characters" class="accordion-collapse collapse" aria-labelledby="heading-Below-30-Characters" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Below 30 Characters test.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Same as H1 -->
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Same-as-H1">
-                        <button class="accordion-button collapsed {% if results['Same_as_H1'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Same-as-H1" aria-expanded="false" aria-controls="collapse-Same-as-H1">
-                            <div class="row w-100">
-                                <div class="col-md-1">
-                                    <i class="fas fa-heading"></i>
-                                </div>
-                                <div class="col-md-3">
-                                    <strong>Same as H1:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    {% if results['Same_as_H1'] %}
-                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
-                                    {% else %}
-                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
-                                    {% endif %}
-                                </div>
-                                <div class="col-md-4 text-end">
-                                    <i class="fas fa-info-circle"></i> More Info
-                                </div>
-                            </div>
-                        </button>
-                    </h2>
-                    <div id="collapse-Same-as-H1" class="accordion-collapse collapse" aria-labelledby="heading-Same-as-H1" data-bs-parent="#resultsAccordion">
-                        <div class="accordion-body">
-                            <p>Additional information about the Same as H1 test.</p>
-                        </div>
-                    </div>
-                </div>
-
                 <!-- Multiple -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading-Multiple">
@@ -274,19 +134,50 @@
                     </div>
                 </div>
 
-                <!-- Outside <head> -->
+                <!-- Over_70_characters -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="heading-Outside-head">
-                        <button class="accordion-button collapsed {% if results['Outside_head'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Outside-head" aria-expanded="false" aria-controls="collapse-Outside-head">
+                <h2 class="accordion-header" id="heading-Over_70_characters">
+                    <button class="accordion-button collapsed {% if results['Over_70_characters'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Over-60-Characters" aria-expanded="false" aria-controls="collapse-Over-60-Characters">
+                        <div class="row w-100">
+                            <div class="col-md-1">
+                                <i class="fas fa-font"></i>
+                            </div>
+                            <div class="col-md-3">
+                                <strong>Over_70_characters:</strong>
+                            </div>
+                            <div class="col-md-4">
+                                {% if results['Over_70_characters'] %}
+                                    <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
+                                {% else %}
+                                    <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
+                                {% endif %}
+                            </div>
+                            <div class="col-md-4 text-end">
+                                <i class="fas fa-info-circle"></i> More Info
+                            </div>
+                        </div>
+                    </button>
+                </h2>
+                <div id="collapse-Over-60-Characters" class="accordion-collapse collapse" aria-labelledby="heading-Over-60-Characters" data-bs-parent="#resultsAccordion">
+                    <div class="accordion-body">
+                        <p>Additional information about the Over 60 Characters test.</p>
+                    </div>
+                </div>
+                </div>
+
+                <!-- alt_text_in_h1 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-alt_text_in_h1">
+                        <button class="accordion-button collapsed {% if results['Alt_Text_in_h1'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Below-30-Characters" aria-expanded="false" aria-controls="collapse-Below-30-Characters">
                             <div class="row w-100">
                                 <div class="col-md-1">
-                                    <i class="fas fa-code"></i>
+                                    <i class="fas fa-font"></i>
                                 </div>
                                 <div class="col-md-3">
-                                    <strong>Outside &lt;head&gt;:</strong>
+                                    <strong>alt_text_in_h1:</strong>
                                 </div>
                                 <div class="col-md-4">
-                                    {% if results['Outside_head'] %}
+                                    {% if results['Alt_Text_in_h1'] %}
                                         <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
                                     {% else %}
                                         <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
@@ -298,12 +189,44 @@
                             </div>
                         </button>
                     </h2>
-                    <div id="collapse-Outside-head" class="accordion-collapse collapse" aria-labelledby="heading-Outside-head" data-bs-parent="#resultsAccordion">
+                    <div id="collapse-Below-30-Characters" class="accordion-collapse collapse" aria-labelledby="heading-Below-30-Characters" data-bs-parent="#resultsAccordion">
                         <div class="accordion-body">
-                            <p>Additional information about the Outside &lt;head&gt; test.</p>
+                            <p>Additional information about the Below 30 Characters test.</p>
                         </div>
                     </div>
                 </div>
+
+                <!-- Non-sequential -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-Non-sequential">
+                        <button class="accordion-button collapsed {% if results['Non-sequential'] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-Same-as-H1" aria-expanded="false" aria-controls="collapse-Same-as-H1">
+                            <div class="row w-100">
+                                <div class="col-md-1">
+                                    <i class="fas fa-heading"></i>
+                                </div>
+                                <div class="col-md-3">
+                                    <strong>Non-sequential:</strong>
+                                </div>
+                                <div class="col-md-4">
+                                    {% if results['Non-sequential'] %}
+                                        <span class="badge bg-black text-success"><i class="fas fa-check"></i> True</span>
+                                    {% else %}
+                                        <span class="badge bg-black text-danger"><i class="fas fa-times"></i> False</span>
+                                    {% endif %}
+                                </div>
+                                <div class="col-md-4 text-end">
+                                    <i class="fas fa-info-circle"></i> More Info
+                                </div>
+                            </div>
+                        </button>
+                    </h2>
+                    <div id="collapse-Same-as-H1" class="accordion-collapse collapse" aria-labelledby="heading-Same-as-H1" data-bs-parent="#resultsAccordion">
+                        <div class="accordion-body">
+                            <p>Additional information about the Same as H1 test.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         {% else %}
             <p>No results found.</p>
