patch headings tools

--- a/app/templates/tools/seo/headings.html
+++ b/app/templates/tools/seo/headings.html
@@ -35,12 +35,7 @@
             <h2 class="section-title">Heading URL Issues</h2>
             <div class="accordion" id="resultsAccordion">
                 
-                'Missing': h1_missing,
-                'Duplicate': h1_duplicate,
-                'Over_70_characters': h1_over_70_characters,
-                'Multiple': h1_multiple,
-                'Alt_Text_in_h1': alt_text_in_h1,
-                'Non-sequential': non_sequential_h1
+               {{ results }}
                       <!-- Missing -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading-Missing">
