--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -198,8 +198,8 @@
                 <a class="dropdown-item" href="/tools/seo/meta-keywords"><i class="fas fa-key"></i> Meta Keywords</a>
                 <a class="dropdown-item" href="/tools/seo/headings"><i class="fas fa-heading"></i> Encabezados (Headings)</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-image"></i> Imágenes (Images)</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-link"></i> Canonicals</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-exclamation-circle"></i> Directives</a>
+                <a class="dropdown-item" href="/tools/seo/canonicals"><i class="fas fa-link"></i> Canonicals</a>
+                <a class="dropdown-item" href="/tools/seo/directives"><i class="fas fa-exclamation-circle"></i> Directives</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-code"></i> Schema.org</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-share-alt"></i> OpenGraph</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-language"></i> Hreflang</a>
