--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -200,9 +200,9 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-image"></i> Imágenes (Images)</a>
                 <a class="dropdown-item" href="/tools/seo/canonicals"><i class="fas fa-link"></i> Canonicals</a>
                 <a class="dropdown-item" href="/tools/seo/directives"><i class="fas fa-exclamation-circle"></i> Directives</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-code"></i> Schema.org</a>
+                <a class="dropdown-item" href="/tools/seo/shema-org"><i class="fas fa-code"></i> Schema.org</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-share-alt"></i> OpenGraph</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-language"></i> Hreflang</a>
+                <a class="dropdown-item" href="/tools/seo/hreflang"><i class="fas fa-language"></i> Hreflang</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-link"></i> URLs</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-clone"></i> Duplicate Content</a>
 
