new batch seo tools

--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -203,7 +203,7 @@
                 <a class="dropdown-item" href="/tools/seo/shema-org"><i class="fas fa-code"></i> Schema.org</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-share-alt"></i> OpenGraph</a>
                 <a class="dropdown-item" href="/tools/seo/hreflang"><i class="fas fa-language"></i> Hreflang</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-link"></i> URLs</a>
+                <a class="dropdown-item" href="/tools/seo/urls"><i class="fas fa-link"></i> URLs</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-clone"></i> Duplicate Content</a>
 
               </div>
@@ -218,9 +218,9 @@
                 <a class="dropdown-item" href="#"><i class="fas fa-external-link-alt"></i> External Links</a>
                 <a class="dropdown-item" href="#"><i class="fas fa-link"></i> Internal Links</a>
                 <h6 class="dropdown-header">HTML/CSS Compliance 🖥️</h6>
-                <a class="dropdown-item" href="#"><i class="fas fa-code"></i>CSS Issues</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-exclamation-triangle"></i> Deprecated HTML Tags</a>
-                <a class="dropdown-item" href="#"><i class="fas fa-compress"></i> Gzip Compression</a>
+                <a class="dropdown-item" href="/tools/seo/css"><i class="fas fa-code"></i>CSS Issues</a>
+                <a class="dropdown-item" href="/tools/seo/deprecated-html"><i class="fas fa-exclamation-triangle"></i> Deprecated HTML Tags</a>
+                <a class="dropdown-item" href="/tools/seo/gzip"><i class="fas fa-compress"></i> Gzip Compression</a>
               </div>
               <div class="column">
                 <h6 class="dropdown-header">Website Security 🛡️</h6>
