new layout dashboard tools

--- a/app/templates/tools/tool_stats.html
+++ b/app/templates/tools/tool_stats.html
@@ -5,6 +5,9 @@
     <div class="col-md-3 chart-container">
         <canvas id="durationChart"></canvas>
     </div>
+</div>
+
+<div class="row">
     <div class="col-md-3 chart-container">
         <canvas id="validResultsChart"></canvas>
     </div>
@@ -14,7 +17,7 @@
    
 </div>
 
-<div class="row text-center mt-4">
+<div class="row text-center  mt-4">
     <div class="col-md-3">
         <h5>Results</h5>
         <span class="badge badge-custom bg-info">{{ total_checks }}</span>
@@ -23,6 +26,8 @@
         <h5>Duration</h5>
         <span class="badge badge-custom bg-info">{{ duration }}</span>
     </div>
+</div>
+<div class="row text-center mt-4">
     <div class="col-md-3">
         <h5>Success Checks</h5>
         <span class="badge badge-custom bg-success">{{ success_count }}</span>
