--- a/app/templates/tools/seo/results_seo.html
+++ b/app/templates/tools/seo/results_seo.html
@@ -1,80 +1,282 @@
 <!-- app/templates/tools/seo/results_seo.html -->
- 
+
 {% extends "base.html" %}
 
 {% block title %}{{title}} | {{slogan}}{% endblock %}
 {% block description %}{{slogan}}{% endblock %}
 {% block keywords %}{{keywords}}{% endblock %}
 
-
 {% block content %}
 
-{% include 'tools/styles.html' %}
+<style>
+    .results-table {
+        margin-top: 20px;
+    }
 
-    {% include 'inc/breadcrumbs.html' %}
+    .results-table th,
+    .results-table td {
+        text-align: left;
+        padding: 10px;
+    }
 
-    <h2  class="mb-3">{{title}} <i class="bi bi-info-circle info-icon" data-bs-toggle="modal" data-bs-target="#infoModal"></i></h2>
-    <p  class="mb-3">{{ slogan }}</p>
+    .results-table th {
+        background-color: #f8f9fa;
+    }
 
-    <div class="alert alert-info" role="alert">
-        <p class="mb-0">{{ definition }}</p>
+    .results-table td {
+        background-color: #fff;
+    }
+
+    .duration {
+        font-style: italic;
+    }
+
+    #duration-chart-container {
+        max-width: 400px;
+        margin: 20px auto;
+    }
+
+    #duration-chart {
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    .status-icon {
+        font-size: 2rem;
+    }
+
+    .status-icon.valid {
+        color: green;
+    }
+
+    .status-icon.invalid {
+        color: red;
+    }
+</style>
+
+<!-- header dashboard-->
+<style>
+    .chart-container {
+        position: relative;
+        margin: auto;
+        height: 150px;
+        width: 150px;
+    }
+
+    .chart-badge {
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .bg-success {
+        background-color: green !important;
+    }
+
+    .bg-danger {
+        background-color: red !important;
+    }
+
+    .badge.bg-black {
+        background-color: black;
+        color: white;
+    }
+
+    .badge.text-success {
+        color: green;
+    }
+
+    .badge.text-danger {
+        color: red;
+    }
+
+    .accordion-button.collapsed .row .text-end {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .dashboard-header {
+        margin-bottom: 30px;
+    }
+
+    .percentage {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    .badge-custom {
+        font-size: 1.25rem;
+    }
+
+    .status-icon {
+        font-size: 2.5rem;
+    }
+
+    .valid {
+        color: green;
+    }
+
+    .invalid {
+        color: red;
+    }
+</style>
+
+{% include 'inc/breadcrumbs.html' %}
+
+<h2 class="mb-3">{{title}} <i class="bi bi-info-circle info-icon" data-bs-toggle="modal" data-bs-target="#infoModal"></i></h2>
+<p class="mb-3">{{slogan}}</p>
+
+<div class="alert alert-info" role="alert">
+    <p class="mb-0">{{definition}}</p>
+</div>
+
+{% include 'tools/quick_form.html' %}
+
+<hr>
+{% if results %}
+    <h3>Resultados de {{title}}:</h3>
+
+    <div class="row mb-6">
+        <div class="col-md-6 chart-container">
+            <canvas id="totalChecksChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-info">Total Checks</span>
+            </div>
+        </div>
+        <div class="col-md-6 chart-container">
+            <canvas id="durationChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-info">Duration</span>
+            </div>
+        </div>
     </div>
 
-    {% include 'tools/quick_form.html' %}
+    <div class="row mt-4 mb-6">
+        <div class="col-md-6 chart-container">
+            <canvas id="validResultsChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-success">Valid Results</span>
+            </div>
+        </div>
+        <div class="col-md-6 chart-container">
+            <canvas id="dangerPercentageChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-danger">Danger Percentage</span>
+            </div>
+        </div>
+    </div>
 
-    <hr>
-    {% if results %}
-        <h3>Resultados de {{ title }}:</h3>
-     
-        {% include 'tools/tool_stats.html' %}
+    <!-- Add two more charts -->
+    <div class="row  mt-4 mb-6">
+        <div class="col-md-6 chart-container">
+            <canvas id="additionalChart1"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-primary">Additional Chart 1</span>
+            </div>
+        </div>
+        <div class="col-md-6 chart-container">
+            <canvas id="additionalChart2"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-primary">Additional Chart 2</span>
+            </div>
+        </div>
+    </div>
 
+    <!-- Add four more example charts -->
+    <div class="row mt-4 mb-6">
+        <div class="col-md-6 chart-container">
+            <canvas id="resultsAdditionalChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-warning">Results Additional Chart</span>
+            </div>
+        </div>
+        <div class="col-md-6 chart-container">
+            <canvas id="durationAdditionalChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-warning">Duration Additional Chart</span>
+            </div>
+        </div>
+    </div>
 
+    <div class="row mt-4 mb-6">
+        <div class="col-md-6 chart-container">
+            <canvas id="successChecksAdditionalChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-success">Success Checks Additional Chart</span>
+            </div>
+        </div>
+        <div class="col-md-6 chart-container">
+            <canvas id="dangerChecksAdditionalChart"></canvas>
+            <div class="chart-badge mt-4">
+                <span class="badge badge-custom bg-danger">Danger Checks Additional Chart</span>
+            </div>
+        </div>
+    </div>
 
-        {% if is_results_valid %}
-            <h2 class="section-title">{{title}}</h2>
-            <div class="accordion" id="resultsAccordion">
-                {% for key, value in results.items() %}
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading-{{ key }}">
-                             <button class="accordion-button collapsed {% if results[key] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{ key }}" aria-expanded="false" aria-controls="collapse-{{ key }}">
-                                <div class="row w-100">
-                                    <div class="col-md-4">
-                                        <strong>{{ key.replace('_', ' ').title() }}:</strong>
-                                    </div>
-                                    <div class="col-md-4">
-                                        {% if value is boolean %}
-                                            {% if value %}
-                                                <span class="badge bg-success"><i class="fas fa-check"></i> True</span>
-                                            {% else %}
-                                                <span class="badge bg-danger"><i class="fas fa-times"></i> False</span>
-                                            {% endif %}
-                                        {% else %}
-                                            {{ value }}
-                                        {% endif %}
-                                    </div>
-                                    <div class="col-md-4">
-                                        <i class="fas fa-info-circle"></i> More Info
-                                    </div>
+    <div class="row text-center mt-4 mb-6">
+        <div class="col-md-3">
+            <h5>Results</h5>
+            <span class="badge badge-custom bg-info">{{total_checks}}</span>
+        </div>
+        <div class="col-md-3">
+            <h5>Duration</h5>
+            <span class="badge badge-custom bg-info">{{duration}}</span>
+        </div>
+    </div>
+    <div class="row text-center mt-4 mb-6">
+        <div class="col-md-3">
+            <h5>Success Checks</h5>
+            <span class="badge badge-custom bg-success">{{success_count}}</span>
+        </div>
+        <div class="col-md-3">
+            <h5>Danger Checks</h5>
+            <span class="badge badge-custom bg-danger">{{danger_percentage}}%</span>
+        </div>
+    </div>
+
+    {% if is_results_valid %}
+        <h2 class="section-title">{{title}}</h2>
+        <div class="accordion" id="resultsAccordion">
+            {% for key, value in results.items() %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-{{key}}">
+                        <button class="accordion-button collapsed {% if results[key] %}bg-success{% else %}bg-danger{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{key}}" aria-expanded="false" aria-controls="collapse-{{key}}">
+                            <div class="row w-100">
+                                <div class="col-md-4">
+                                    <strong>{{key.replace('_', ' ').title()}}:</strong>
                                 </div>
-                            </button>
-                        </h2>
-                        <div id="collapse-{{ key }}" class="accordion-collapse collapse" aria-labelledby="heading-{{ key }}" data-bs-parent="#resultsAccordion">
-                            <div class="accordion-body">
-                                <p>Additional information about {{ key.replace('_', ' ').title() }}.</p>
-                                <!-- You can add more detailed information here if available -->
+                                <div class="col-md-4">
+                                    {% if value is boolean %}
+                                        {% if value %}
+                                            <span class="badge bg-success"><i class="fas fa-check"></i> True</span>
+                                        {% else %}
+                                            <span class="badge bg-danger"><i class="fas fa-times"></i> False</span>
+                                        {% endif %}
+                                    {% else %}
+                                        {{value}}
+                                    {% endif %}
+                                </div>
+                                <div class="col-md-4">
+                                    <i class="fas fa-info-circle"></i> More Info
+                                </div>
                             </div>
+                        </button>
+                    </h2>
+                    <div id="collapse-{{key}}" class="accordion-collapse collapse" aria-labelledby="heading-{{key}}" data-bs-parent="#resultsAccordion">
+                        <div class="accordion-body">
+                            <p>Additional information about {{key.replace('_', ' ').title()}}.</p>
                         </div>
                     </div>
-                {% endfor %}
-            </div>
-        {% else %}
-            <p>No se encontraron resultados válidos.</p>
-        {% endif %}
-
+                </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <p>No se encontraron resultados válidos.</p>
     {% endif %}
 
-    {% include 'tools/help_modal.html' %}
+{% endif %}
 
+{% include 'tools/help_modal.html' %}
 
 <script>
     const durationCtx = document.getElementById('durationChart').getContext('2d');
@@ -212,7 +414,232 @@
             }
         }
     });
-</script>
 
+    // Additional charts
+    const additionalChart1Ctx = document.getElementById('additionalChart1').getContext('2d');
+    const additionalChart1 = new Chart(additionalChart1Ctx, {
+        type: 'line',
+        data: {
+            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul'],
+            datasets: [{
+                label: 'Additional Data 1',
+                data: [10, 20, 30, 40, 50, 60, 70],
+                backgroundColor: 'rgba(153, 102, 255, 1)',
+                borderColor: 'rgba(153, 102, 255, 1)',
+                borderWidth: 1,
+                fill: false
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+
+    const additionalChart2Ctx = document.getElementById('additionalChart2').getContext('2d');
+    const additionalChart2 = new Chart(additionalChart2Ctx, {
+        type: 'radar',
+        data: {
+            labels: ['Metric 1', 'Metric 2', 'Metric 3', 'Metric 4', 'Metric 5'],
+            datasets: [{
+                label: 'Additional Data 2',
+                data: [65, 59, 90, 81, 56],
+                backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                borderColor: 'rgba(255, 159, 64, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                r: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+
+    // Four additional example charts
+    const resultsAdditionalChartCtx = document.getElementById('resultsAdditionalChart').getContext('2d');
+    const resultsAdditionalChart = new Chart(resultsAdditionalChartCtx, {
+        type: 'bar',
+        data: {
+            labels: ['Metric 1', 'Metric 2', 'Metric 3'],
+            datasets: [{
+                label: 'Results Data',
+                data: [12, 19, 3],
+                backgroundColor: 'rgba(255, 206, 86, 1)',
+                borderColor: 'rgba(255, 206, 86, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+
+    const durationAdditionalChartCtx = document.getElementById('durationAdditionalChart').getContext('2d');
+    const durationAdditionalChart = new Chart(durationAdditionalChartCtx, {
+        type: 'line',
+        data: {
+            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun'],
+            datasets: [{
+                label: 'Duration Data',
+                data: [30, 20, 40, 50, 25, 45],
+                backgroundColor: 'rgba(54, 162, 235, 1)',
+                borderColor: 'rgba(54, 162, 235, 1)',
+                borderWidth: 1,
+                fill: false
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+
+    const successChecksAdditionalChartCtx = document.getElementById('successChecksAdditionalChart').getContext('2d');
+    const successChecksAdditionalChart = new Chart(successChecksAdditionalChartCtx, {
+        type: 'polarArea',
+        data: {
+            labels: ['Metric A', 'Metric B', 'Metric C'],
+            datasets: [{
+                label: 'Success Checks Data',
+                data: [11, 16, 7],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+
+    const dangerChecksAdditionalChartCtx = document.getElementById('dangerChecksAdditionalChart').getContext('2d');
+    const dangerChecksAdditionalChart = new Chart(dangerChecksAdditionalChartCtx, {
+        type: 'bubble',
+        data: {
+            datasets: [{
+                label: 'Danger Checks Data',
+                data: [
+                    {x: 10, y: 20, r: 15},
+                    {x: 15, y: 25, r: 10},
+                    {x: 20, y: 30, r: 20}
+                ],
+                backgroundColor: 'rgba(255, 99, 132, 1)',
+                borderColor: 'rgba(255, 99, 132, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                y: {
+                    beginAtZero: true,
+                    grid: {
+                        display: false
+                    }
+                },
+                x: {
+                    grid: {
+                        display: false
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    display: false
+                }
+            }
+        }
+    });
+</script>
 
 {% endblock %}
