--- a/app/templates/inc/breadcrumbs.html
+++ b/app/templates/inc/breadcrumbs.html
@@ -2,7 +2,7 @@
 {% if breadcrumbs %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></li></a>
+        <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></a></li>
         {% for crumb in breadcrumbs %}
         {% if loop.last %}
         <li class="breadcrumb-item active" aria-current="page">{{ crumb.text }}</li>
