new dashboard plus1b

--- a/app/templates/tools/quick_form.html
+++ b/app/templates/tools/quick_form.html
@@ -48,7 +48,7 @@
         padding: 1rem;
     }
 
-    .speech-bubble::after {
+    ._speech-bubble::after {
         content: '';
         position: absolute;
         top: 50%;
