info help updated seo

--- a/app/templates/tools/quick_form.html
+++ b/app/templates/tools/quick_form.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-    <h2 class="mb-3">{{title}} <i class="bi bi-info-circle info-icon" data-bs-toggle="modal" data-bs-target="#infoModal"
-            aria-label="More Information"></i></h2>
-    <p class="mb-3">{{slogan}}</p>
+    <h2 class="mb-3">{{title}}</h2>
+    <p class="mb-3">{{slogan}}<i class="bi bi-info-circle info-icon" data-bs-toggle="modal" data-bs-target="#infoModal"
+        aria-label="More Information"></i></p>
 
     <div class="row mb-3">
         <div class="col-md-7">
