--- a/app/templates/tools/seo/results_seo.html
+++ b/app/templates/tools/seo/results_seo.html
@@ -134,7 +134,7 @@
     <div class="row dashboard-header">
         <div class="col text-center">
             <h3>Analytics Dashboard<br />{{title}}</h3>
-            <p class="lead">A comprehensive view of your data metrics @@</p>
+            <p class="lead">A comprehensive view of your data metrics</p>
         </div>
     </div>
 
