--- a/app/templates/tools/domains/results_domains.html
+++ b/app/templates/tools/domains/results_domains.html
@@ -223,6 +223,10 @@ p.lead {
 </div>
 -->
 
+<h3>
+    {{ results }}
+</h3>
+
 <div class="accordion" id="resultsAccordion">
     {% for key, value in results.items() %}
     <div class="accordion-item">
