--- a/app/templates/tools/seo/results_seo.html
+++ b/app/templates/tools/seo/results_seo.html
@@ -75,14 +75,14 @@
     
     .status-icon.valid,
     .badge.bg-success {
-        color: #28a745;
+        color: #fff;
         background-color: #28a745 !important;
     }
     
     .status-icon.invalid,
     .badge.bg-danger {
-        color: #dc3545;
-        background-color: #dc3545 !important;
+        color: #fff;
+        background-color: #dc4444 !important;
     }
     
     .badge {
