--- a/app/templates/tools/accesibility/spelling.html
+++ b/app/templates/tools/accesibility/spelling.html
@@ -27,7 +27,7 @@
 
     
     {% if results %}
-      
+    {% if is_results_valid %}
 
     <div id="collapseZero1" class="accordion-collapse collapse" aria-labelledby="headingZero1"
     data-bs-parent="#accordionExample">
